Bug #227873 ---> semicolons in vcard fields

Patch by Andrew Taylor <ataylor@its.to>

r=bienvenu
sr=mscott
a=asa